	* Set PHP_version to 4.1.0- in ext_emconf.php.
	* Add partial draft of manual.
	* Remove function sendTheMail from class.dmailer.php.
	* Remove funcions getURL, getExtendedURL, ux_translate_uri, substHTTPurlsInPlainText, substHREFsInHTML, substMediaNamesInHTML, constructHTML from class.dmailer.php.
	* Extension now dependent on TYPO3 4.0 (t3lib_htmlmail).
	* Delete file dmailerd.phpsh, update manual accordingly.
	* Correct linebreaks in dmailerd.phpcron.
	* Fix reference to mysql_fetch_assoc in class.web_mod_dmail.php
	* Revert incorrect change to ext_tables.sql (mid must have backticks on KEY statements).

2006-01-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add charset column to sys_dmail table
	* Change default encoding to quoted-printable in TCA
	* Add configuration variables (ext_conf_template.txt and ext_localconf.php)
	* Remove lock to Global (ext_emconf.php)
	* Update to returnmail.phpsh (from sr_direct_mail_ext)
	* Add mod3 directory
	* Add returnmail.phpsh and class.readmail.php to mod3 directory.
	* Update locallang.php file in mod directory (from sr_direct_mail_ext).
	* Update to dmailer.phpcron and class.dmailer.php in mod directory (from sr_direct_mail_ext)
	* Add mod2 directory.
	* Add dmailer.phpsh and class.dmailer.php to mod2 directory.
	* Add files locallang_mod.php and clear.gif in directory mod.
	* Update index.php and conf.php in directory mod.
	* Multiple changes to class.mod_web_dmail.php (from sr_direct_mail_ext).
	* Merge mod2 and mod3 directories into mod directory
	* Get direct mail character set from TS template when based on internal page.

2005-07-7   Jan-Erik Revsbech <jer@moccompany.com>
	* Fixed problem with not setting encoding Bug #1264
	* Removed all trailing whitespaces from mod/class.mod_wed_dmail.php
	
2005-05-18  Thorsten Kahler  <thorsten.kahler@dkd.de>

	* Added a ChangeLog file too keep track of changes
	* Added CVS Revision Tags
	* Added PHPDoc Tags "package" and "subpackage"
